[tool.poetry]
name = "emmy"
version = "0.0.0"
description = "Musical piece of code."
authors = ["Yuly Gorbatkov <contact@amayakasa.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.1"

[tool.poetry.group.style.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"

[tool.poetry.group.types.dependencies]
mypy = "^1.4.1"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.ruff]
line-length = 79
respect-gitignore = true
target-version = "py311"
select = [
  "PL",    # pylint
  "F",     # pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "C90",   # mccabe
  "I",     # isort
  "N",     # pep8-naming
  "YTT",   # flake8-2020
  "S",     # flake8-bandit
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "C40",   # flake8-comprehensions
  "T10",   # flake8-debugger
  "EXE",   # flake8-executable
  "ISC",   # flake8-implicit-str-concat
  "ICN",   # flake8-import-conventions
  "G",     # flake8-logging-format
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "PT",    # flake8-pytest-style
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TCH",   # flake8-type-checking
  "ARG",   # flake8-unused-arguments
  "PGH",   # pygrep-hooks
  "RSE",   # flake8-raise
  "RUF",   # ruff
]

[tool.mypy]
pretty = true
python_version = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
